# Gateway_backup

AdiNexus_test_plan/: ESP32_IoT_Gateway_Demo_Test_Plan.xlsx  ESP32_IoT_Gateway_Professional_Test_Scenarios.xlsx  ESP32_IoT_Gateway_Test_Plan.xlsx
Adi_MQTT_EMQX Config/: Nidhi_Schedule.xlsx  cert.pem
Adi_MQTT_EMQX Config/certs/: ca.crt  ca.key  ca.pem  ca.srl  client.crt  client.csr  client.key  client.pem  emqx.crt  emqx.csr  emqx.key  emqx.pem
Datasheets/: 1.4-VT-ENG-TMPL-SRS New.doc  ADI-ENG-IoT Gateway-SRS V1.0.doc  IoTGateway.pptx  IoTGateway_Report.docx  IoTGateway_Report_1.docx  MQTT & MODBUS.xlsx  MQTT R.xlsx  MQTT.xlsx  Modbus_Config_Flow.txt  OTA updates methods.docx  Open Notebook.onetoc2  SRS Copy.doc  Software Requirements Specifications copy.docx  Tasks-Asus.xlsx  Tasks.xlsx  db_selection.xlsx  esp32-lan8720-pinout.pptx  mc.pptx  model2.pptx  partitions.csv  task list.xlsx
Delta PLC/: 032823 Temp Record HMI_pass 1234~~4.00.10.1129.191313.dpa  Delta PLC addresses.xlsx
Docs/: AdiInfi 2023 (1).pptx  AdiNexus_LITE_Manual.docx  AdiNexus_Stickers_Details 1.xlsx  AdiNexus_Stickers_Details.xlsx  AdiNexus_V2_Lite_User_Manual.docx  Gateway-Cloud-MQTT-Protocol.txt  VPN-RMS_Communication.txt  c schedule.xlsx  c# shcedule 1.xlsx  c++ schedule 1.xlsx  gateway_config_697b521b06f1c0a5d9d32771_2026-06-01.json  ota_manifest_test.csv
ESP-IDF_CODE/: AdiNexus_Modbus.rar  adiinfi_test_firmware.rar  esp_modbus test.rar  esp_modbus_serial+tcp.rar
ESP-IDF_CODE/AdiNexus_Modbus/AdiNexus_Modbus/: sdkconfig.old
ESP-IDF_CODE/AdiNexus_Modbus/AdiNexus_Modbus/main/: CMakeLists.txt  gateway_main.cpp  idf_component.yml
ESP-IDF_CODE/IEC_example_server/: CMakeLists.txt
ESP-IDF_CODE/IEC_example_server/components/iec104/: CMakeLists.txt  iec104_client.cpp
ESP-IDF_CODE/IEC_example_server/components/iec104/include/: iec104_client.h
ESP-IDF_CODE/IEC_example_server/main/: CMakeLists.txt  main.cpp
ESP-IDF_CODE/adiinfi_test_firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
ESP-IDF_CODE/adiinfi_test_firmware/main/: CMakeLists.txt  Kconfig.projbuild  gateway_main.cpp  idf_component.yml
ESP-IDF_CODE/adiinfi_test_firmware/modules/Button/: button.cpp  button.h
ESP-IDF_CODE/adiinfi_test_firmware/modules/ETH_RMII/: RmiiEthernetModule.cpp  RmiiEthernetModule.h
ESP-IDF_CODE/adiinfi_test_firmware/modules/ETH_SPI/: SpiEthernetModule.cpp  SpiEthernetModule.h
ESP-IDF_CODE/adiinfi_test_firmware/modules/ETH_W5500/: W5500EthernetModule.cpp  W5500EthernetModule.h
ESP-IDF_CODE/adiinfi_test_firmware/modules/GSMModule/: GSMModule.cpp  GSMModule.h
ESP-IDF_CODE/adiinfi_test_firmware/modules/GatewayModule/: gateway.cpp  gateway.h
ESP-IDF_CODE/adiinfi_test_firmware/modules/I2CManager/: i2c_init.h
ESP-IDF_CODE/adiinfi_test_firmware/modules/InternetModule/: InternetModule.cpp  InternetModule.h
ESP-IDF_CODE/adiinfi_test_firmware/modules/LedController/: LedController.cpp  LedController.h
ESP-IDF_CODE/adiinfi_test_firmware/modules/MacroConfig/: MacroConfig.h
ESP-IDF_CODE/adiinfi_test_firmware/modules/SDcardModule/: sdcard.h  (+1 more)
ESP-IDF_CODE/esp_modbus test/esp_modbus test/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
ESP-IDF_CODE/esp_modbus_serial+tcp/esp_modbus_serial+tcp/: CMakeLists.txt  sdkconfig  sdkconfig.old
Schematics/: IOT_Gateway_V4_Schematic_Comparison.xlsx
Zambia/: ABB ACQ580 ModbusDetail.xlsx  ACQ580_complete_technical_guide.html  details_by_sir.txt
extra/: AdiLogix (1).pptx  esp32_module_comparison.html  esp32_psram_4mb_limit_explainer.html  esp32_wrover_ie_vs_wroom_full_datasheet.html  wrover_ie_vs_wroom_32d_pin_diff.html  wrover_ie_vs_wroom_full_datasheet_comparison.html
(+20 files in other folders)
